--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 
 	.Service {
 		display: flex;
-		flex-direction: column;
-		justify-content: center;
+		flex-direction: row;
+		justify-content: space-around;
 		align-items: flex-start;
 		height: 150px;
 	}
