--- a/index.html
+++ b/index.html
@@ -80,11 +80,10 @@
 
 	.Service {
 		display: flex;
-		flex-direction: row;
-		justify-content: space-around;
-		align-items: flex-start;
-		height: 150px;
-	}
+        flex-wrap: wrap;
+        align-items:center;
+        
+    }
 
 	.Serviceblock {
 		display: flex;
