--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		display: flex;
         flex-wrap: wrap;
         align-items:center;
-        
+        justify-content:center;
     }
 
 	.Serviceblock {
