--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	.second-section {
 		display: flex;
 		flex-direction: column;
-		padding: 0 100px;
+		align-items: center;
 	}
 
 	.menu-container {
@@ -82,7 +82,6 @@
 		display: flex;
         flex-wrap: wrap;
         align-items:center;
-        justify-content:center;
     }
 
 	.Serviceblock {
