--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
 	.Service {
 		display: flex;
         flex-wrap: wrap;
-        align-items:center;
+        align-items: center;
+        justify-content: center; 
     }
 
 	.Serviceblock {
@@ -141,19 +142,19 @@
 			<h2>Что я делаю</h2>
 			<div class="Service">
 				<div class="Serviceblock">
-					<img src="./img/icons/tools.png" alt="tools-and-utensils" class="Serviceicon" />
+					<img src="tools.png" alt="tools-and-utensils" class="Serviceicon" />
 					<p class="Servicetext">Вёрстка лендинг-страниц и сайтов любой сложности</p>
 				</div>
 				<div class="Serviceblock">
-					<img src="./img/icons/responsive.png" alt="responsive" class="Serviceicon" />
+					<img src="responsive.png" alt="responsive" class="Serviceicon" />
 					<p class="Servicetext">Адаптивная вёрстка под все браузеры и устройства</p>
 				</div>
 				<div class="Serviceblock">
-					<img src="./img/icons/programming.png" alt="programming" class="Serviceicon" />
+					<img src="programming.png" alt="programming" class="Serviceicon" />
 					<p class="Servicetext">Frontend-разработка и программирование</p>
 				</div>
 				<div class="Serviceblock">
-					<img src="./img/icons/coding.png" alt="coding" class="Serviceicon" />
+					<img src="coding.png" alt="coding" class="Serviceicon" />
 					<p class="Servicetext">Исправление и доработка существующей вёрстки</p>
 			</div>
 		</div>
