--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 		flex-direction: row;
 		justify-content: space-around;
 		align-items: flex-start;
+		flex-basis: 25%
 		height: 150px;
 	}
 
@@ -142,7 +143,7 @@
 			<h2>Что я делаю</h2>
 			<div class="Service">
 				<div class="Serviceblock">
-					<img src="resources/tools.png" alt="tools-and-utensils" class="Serviceicon" />
+					<img src="tools.png" alt="tools-and-utensils" class="Serviceicon" />
 					<p class="Servicetext">Вёрстка лендинг-страниц и сайтов любой сложности</p>
 				</div>
 				<div class="Serviceblock">
