--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 			<h2>Что я делаю</h2>
 			<div class="Service">
 				<div class="Serviceblock">
-					<img src="tools.png" alt="tools-and-utensils" class="Serviceicon" />
+					<img src="tools-and-utensils.png" alt="tools-and-utensils" class="Serviceicon" />
 					<p class="Servicetext">Вёрстка лендинг-страниц и сайтов любой сложности</p>
 				</div>
 				<div class="Serviceblock">
