--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 		flex-direction: row;
 		justify-content: space-around;
 		align-items: flex-start;
-		flex-basis: 25%
 		height: 150px;
+		width: 275px;
 	}
 
 	.Serviceicon {
