--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     }
 
 	.Serviceblock {
-		display: flex;
+		display: inline-block;
 		flex-direction: row;
 		justify-content: space-around;
 		align-items: flex-start;
@@ -100,6 +100,7 @@
 	}
 
 	.Servicetext {
+		color: #333366
 		height: 11px
 	}
 
