--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 
 	.Serviceblock {
 		display: inline-block;
+		text-align: center;
 		flex-direction: row;
 		justify-content: space-around;
 		align-items: flex-start;
