--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
 		cursor: pointer;
 	}
 
+	.learn-more {
+		border: 1px solid #fc557c;
+		padding: 60px 270px;
+		color: #ff4e2e;
+		cursor: pointer;
+	}
+
 	.title-container {
 		display: flex;
 		flex-direction: column;
@@ -135,7 +142,7 @@
 			<div class="title-container">
 				<h1>Дмитрий Алексеев</h1>
 				<h3>Frontend-разработчик и веб-верстальщик</h3>
-				<button>Узнать больше</button>
+				<button class="learn-more">Узнать больше</button>
 			</div>
 		</div>
 		<div class="fixed-container second-section">
