--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 	.fixed-container {
 		width: 1000px;
 		margin: 0 auto;
+		background-image: url(photo.png);
+   		background-repeat: no-repeat;
+   		background-position: right 115px
 	}
 
 	.first-section {
@@ -72,8 +75,9 @@
 
 	.learn-more {
 		border: 1px solid #fc557c;
-		padding: 40px 200px;
-		color: #ff4e2e;
+		padding: 20px 70px;
+		background-color: #ff4e2e;
+		color: white;
 		cursor: pointer;
 	}
 
