--- a/index.html
+++ b/index.html
@@ -17,19 +17,20 @@
 		margin: 0 auto;
 		background-image: url(photo.png);
    		background-repeat: no-repeat;
-   		background-position: right 115px
+   		background-position: right 55px
 	}
 
 	.first-section {
 		display: flex;
 		flex-direction: column;
-		padding: 0 100px;
+		padding: 100 100px;
 	}
 
 	.second-section {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		padding: 0 100px
 	}
 
 	.menu-container {
@@ -81,6 +82,15 @@
 		cursor: pointer;
 	}
 
+	.learn-cost {
+		border: 1px solid #fc557c;
+		padding: 20px 70px;
+		background-color: #ff4e2e;
+		color: white;
+		cursor: pointer;
+		padding: 50 0px
+	}
+
 	.title-container {
 		display: flex;
 		flex-direction: column;
@@ -101,6 +111,7 @@
 		text-align: center;
 		height: 150px;
 		width: 250px;
+		padding: 50 0px
 	}
 
 	.Serviceicon {
@@ -168,6 +179,7 @@
 					<img src="coding.png" alt="coding" class="Serviceicon" />
 					<p class="Servicetext">Исправление и доработка существующей вёрстки</p>
 			</div>
+			<button class="learn-cost">Узнать стоимость</button>
 		</div>
 	</header>
 </body>
