--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		margin: 0 auto;
 		background-image: url(photo.png);
    		background-repeat: no-repeat;
-   		background-position: right 250px
+   		background-position: right bottom
 	}
 
 	.first-section {
@@ -88,7 +88,7 @@
 		background-color: #ff4e2e;
 		color: white;
 		cursor: pointer;
-		padding: 50 0px
+		padding: 0 50px
 	}
 
 	.title-container {
@@ -111,7 +111,7 @@
 		text-align: center;
 		height: 150px;
 		width: 250px;
-		padding: 50 0px
+		padding: 0 50px
 	}
 
 	.Serviceicon {
