--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		margin: 0 auto;
 		background-image: url(photo.png);
    		background-repeat: no-repeat;
-   		background-position: right bottom 120px
+   		background-position-x: right ;
 	}
 
 	.first-section {
@@ -30,7 +30,7 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		padding: 0 100px
+		padding: 30 100px
 	}
 
 	.menu-container {
