--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		margin: 0 auto;
 		background-image: url(photo.png);
    		background-repeat: no-repeat;
-   		background-position-x: right ;
+   		background-position-x: right 120px;
 	}
 
 	.first-section {
