--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		margin: 0 auto;
 		background-image: url(photo.png);
    		background-repeat: no-repeat;
-   		background-position-x: right 120px;
+   		background-position-x: right -120px;
 	}
 
 	.first-section {
@@ -88,7 +88,6 @@
 		background-color: #ff4e2e;
 		color: white;
 		cursor: pointer;
-		padding: 20 10px
 	}
 
 	.title-container {
@@ -111,7 +110,7 @@
 		text-align: center;
 		height: 150px;
 		width: 250px;
-		padding: 20 5px
+		margin-top: : 30px
 	}
 
 	.Serviceicon {
@@ -136,7 +135,7 @@
 	}
 	h2 {
 		font-size: 40px;
-		margin: 0;
+		margin: 20px;
 	}
 	</style>
 </head>
