--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		margin: 0 auto;
 		background-image: url(photo.png);
    		background-repeat: no-repeat;
-   		background-position-x: right -120px;
+   		background-position-x: right 
 	}
 
 	.first-section {
@@ -110,7 +110,6 @@
 		text-align: center;
 		height: 150px;
 		width: 250px;
-		margin-top: : 30px
 	}
 
 	.Serviceicon {
